# cpuctl

./: CMakeLists.txt  README.md  config.ini  cpuctl.service
inc/: cpuctl.hpp  ioctl.h
src/: cpuctl.cc  main.cc
